# workzone

./: .gitignore  01_workzone_yolo_setup.ipynb  05_workzone_scene_features_from_yolo.ipynb  06_featuresall.ipynb  07_learned_workzone_score.ipynb  APPS_GUIDE.md  APPS_REFACTORING_COMPLETE.md  APP_TESTING_GUIDE.md  DEVELOPMENT.md  EXTENSION_GUIDE.md  FILE_MANIFEST.md  INTEGRATION_COMPLETE.md  JETSON_QUICKSTART.md  Makefile  NOTEBOOK_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  TRANSFORMATION_SUMMARY.md  __init__.py  alpamayo_10hz_inspector.py  alpamayo_threaded.py  app_workzone_video_demo2.py  app_workzone_video_demo3.py  debug_trace.txt  launch_streamlit.sh  pyproject.toml  requirements.txt  torchvision-0.23.0-cp310-cp310-linux_aarch64.whl  train_workzone_yolo.py
configs/: config.yaml  jetson_config.yaml  jetson_config_defaults.yaml  jetson_test_config.yaml  motion_cue_config.yaml  multi_cue_config.yaml
data/: readme.txt
docs/: PHASE1_3.md  PROJECT_INDEX.md  README.md  REPOSITORY_STRUCTURE.md
docs/archive/: OCR_ANALYSIS_FINDINGS.md  PHASE1_3_MOTION_CUES.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/guides/: APP_TESTING_GUIDE.md  OCR_CLI_USAGE.md  PHASE1_4_SCENE_CONTEXT.md  QUICKSTART.md
docs/jetson/: README.md
docs/phase1_1/: DOWNLOAD_RESULTS.md  PHASE1_1_RESULTS.md  download_results.sh
docs/phase1_4/: COMPLETE_STATUS.md  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  PHASE1_4.md  PHASE1_4_SCENE_CONTEXT.md  README.md  (+3 more)
notebooks/: 01_workzone_yolo_setup.ipynb  04_workzone_video_state_machine.ipynb  05_workzone_scene_features_from_yolo.ipynb  05_workzone_video_timeline_calibration.ipynb  06_clip_scene_classifier.ipynb  06_triggered_vlm_semantic_verification.ipynb  07_phase1_4_scene_context.ipynb  6_workzone_detector.ipynb  nvidia_vla_alpamayo_smoke_test.ipynb
scripts/: HARDNEG_QUICKSTART.sh  PHASE1_4_QUICKSTART.sh  TEST_OCR_CLI.sh  batch_mine_hard_negatives.py  build_qwen_trt.sh  build_vila_trt.sh  check_classes.py  consolidate_candidates.py  demo_phase1_4_complete.sh  download_models.sh  evaluate_clip_impact.py  evaluate_phase1_4.py  evaluate_signs.py  extract_frames.py  fusion_engine.py  generate_calib_images.py  investigate_video.py  jetson_app.py  jetson_app_sota.py  jetson_cli_app.py  jetson_launcher.py  jetson_launcher_sota.py  launch_streamlit.sh  mine_hard_negatives.py  optimize_for_jetson.py  preview_camera.py  process_video_fusion.py  run_jetson_inference.py  sample_candidates.py  scene_context.py  setup_orin_nano.sh  speed_limit_dla.py  train_temporal_attention.py  verify_installation.sh  verify_phase2_1.py  vlm_sota_verifier.py  vlm_verifier.py
tests/: conftest.py  test_config.py  test_models.py  test_ocr_debug.py  test_pipelines.py
tools/: batch_mine_hard_negatives.py  mine_hard_negatives.py  process_video_vlm.py  run_jetson_inference.py  setup.sh  setup_clip.py  speed_limit_dla.py  train_phase2_1_on_trajectories.py  train_scene_context.py  train_temporal_attention.py
(+77 files in other folders)
