[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workzone"
version = "1.0.0"
description = "AI-powered construction zone detection and monitoring system for ESV competition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "WMaia9", email = "contact@workzone.dev" }
]
keywords = ["yolo", "construction", "detection", "computer-vision", "esv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "Pillow>=10.0.0",
    "wandb>=0.15.0",
    "streamlit>=1.28.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "open_clip_torch>=2.20.0",
    "easyocr>=1.7.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/WMaia9/workzone"
Documentation = "https://github.com/WMaia9/workzone#readme"
Repository = "https://github.com/WMaia9/workzone.git"
Issues = "https://github.com/WMaia9/workzone/issues"

[project.scripts]
workzone-train = "workzone.cli.train_yolo:main"
workzone-infer = "workzone.cli.infer_video:main"
workzone-alpamayo-inspector = "workzone.apps.alpamayo.alpamayo_10hz_inspector:main"
workzone-alpamayo-threaded = "workzone.apps.alpamayo.alpamayo_threaded:main"

[tool.setuptools]
packages = ["workzone"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["workzone"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
